# SolverHub

./: .gitignore  CMakeLists.txt  GITHUB_ACTIONS.md  README.md  UniMesh.cpp  mesh_point.cpp  test_auto_format.txt  test_auto_format2.txt  test_loadfromfile.cpp  test_scientific.cpp
.github/workflows/: ci.yml  cmake.yml
code/: CouplingPart.cpp  CouplingPart.h  SharedMemoryLogger.h  SharedMemoryManager.cpp  SharedMemoryManager.cpp.bak  SharedMemoryManager.h  SharedMemoryStruct.cpp  SharedMemoryStruct.h  Solver.cpp  Solver.h  SolverHub.cpp  SolverHub.h  SolverHubDef.cpp  SolverHubDef.h  part1_forcey_1.txt  pch.h
datafiles/: part1_forcex_1.txt
test/: CMakeLists.txt  LocalData_test.cpp
tests/: CMakeLists.txt  test_loadfromfile.cpp
